# mobili-ar

./: .gitignore  MODULES.md  mobiliar-schema.sql  mobiliar.db  package-lock.json  package.json
lista_corte_0001/: blanco_farplac_18mm.csv
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: lista_corte.py  lista_corte_operativa.py
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: auth.rs  cantos.rs  composiciones.rs  config.rs  divisores.rs  lista_corte.rs  listas_corte.rs  mansiones.rs  materiales.rs  mod.rs  piezas.rs  trabajos.rs  usuarios.rs
src-tauri/src/db/: cantos.rs  composiciones.rs  connection.rs  divisores.rs  ensamble.rs  listas_corte.rs  mansiones.rs  materiales.rs  mod.rs  piezas.rs  schema.rs  sesiones.rs  trabajos.rs  usuarios.rs
src-tauri/src/engine/: calculator.rs  mod.rs
src/components/: FormularioUsuario.css  FormularioUsuario.jsx  SeccionUsuarios.css  SeccionUsuarios.jsx  SeleccionMansion.css  SeleccionMansion.jsx  TarjetaUsuario.css  TarjetaUsuario.jsx
src/db/: index.js
src/hooks/: useMansiones.js  useUsuarios.js
src/screens/Dashboard/: Dashboard.css  index.jsx
src/screens/DbSetup/: DbSetup.css  index.jsx
src/screens/Editor/: Editor.css  index.jsx
src/screens/Gestion/: Gestion.css  GestionUsuarios.css  index.jsx
src/screens/Libreria/: Libreria.css  index.jsx
src/screens/ListasCorte/: ListasCorte.css  index.jsx
src/screens/Login/: Login.css  index.jsx
src/screens/Proyecto/: Proyecto.css  index.jsx
(+27 files in other folders)
