[package]
name = "mobili-ar"
version = "0.1.0"
edition = "2021"

[lib]
name = "mobili_ar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["test"] }
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
rusqlite            = { version = "0.31", features = ["bundled"] }
uuid                = { version = "1", features = ["v4"] }
chrono              = { version = "0.4", features = ["serde"] }
rand                = "0.8"
anyhow              = "1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
chrono = { version = "0.4", features = ["serde"] }
